--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ Author: Chad D.Mills
 
 */
 
+
 ul {
   list-style-type: none;
 }
@@ -97,6 +98,33 @@ ul {
  font-weight: Bold;
   font-size: 12px;
 }
+
+/* CLASS: Weather Data from OpenWeather API*/
+.weatherData
+
+{
+
+font-weight: Bold;
+
+}
+
+/* CLASS: Powered by Information & Branding*/
+.poweredBy
+
+{
+color: Gray;
+font-size: 9px;
+
+}
+
+/* CLASS: Trashcan Glyph icon style*/
+.delete
+
+{
+font-size: 11px;
+color: Gray;
+}
+
 
 #resultPanel
 
